--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ bower_components
 build/Release
 
 # Dependency directories
+api/node_modules/
+web-client/node_modules/
 node_modules/
 jspm_packages/
 
@@ -128,3 +130,26 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
